# mlflowTutorial

./: LICENSE  README.md  pyproject.toml  template.py
research/: 01_ingestion.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/utils/: common.py
