[tool.poetry]
name = "mlflowtuts"
version = "0.1.0"
description = "Projeto para setar o pipeline perfeito"
authors = ["Ingrid-0906 <icardoso792@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
dvc = "^3.55.2"
mlflow = "^2.16.2"
notebook = "^7.2.2"
numpy = "1.26.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
python-box = "^7.2.0"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
ensure = "^1.0.4"
joblib = "^1.4.2"
types-pyyaml = "^6.0.12.20240917"
scipy = "^1.14.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
